[tool.poetry]
name = "rag-chroma"
version = "0.1.0"
description = "RAG using Chroma"
authors = [
    "Erick Friis <erick@langchain.dev>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
langchain = "^0.1"
openai = "<2"
tiktoken = ">=0.5.1"
langchain-text-splitters = ">=0.0.1,<0.1"
flask_restx = "^1.3.0"
faiss-cpu = "1.8.0"
langchain-openai = "0.1.6"
watchdog = "^4.0.0"
datetime = "^5.5"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[tool.langserve]
export_module = "rag_chroma"
export_attr = "chain"

[tool.templates-hub]
use-case = "rag"
author = "LangChain"
integrations = ["OpenAI", "Chroma"]
tags = ["vectordbs"]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
(gptcraw) ➜  web >....
tiktoken = ">=0.5.1"
langchain-text-splitters = ">=0.0.1,<0.1"
flask_restx = "^1.3.0"
faiss-cpu = "1.8.0"
langchain-openai = "0.1.6"
watchdog = "^4.0.0"
datetime = "^5.5"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.21"

[tool.langserve]
export_module = "rag_chroma"
export_attr = "chain"

[tool.templates-hub]
use-case = "rag"
author = "LangChain"
integrations = ["OpenAI", "Chroma"]
tags = ["vectordbs"]

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
